<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginHorizontal="50dp"
        app:cardCornerRadius="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:padding="10dp"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_input_background"
                android:drawableStart="@drawable/focused_user_icon"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_input_background"
                android:drawableStart="@drawable/focused_lock_icon"
                android:drawablePadding="10dp"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
            <Button
                android:id="@+id/login"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/log_in_" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>